Adding Feedback Bucket Architecture